<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.soubu.CRMProject.widget.ColorArcProgressBar
        android:id="@+id/capb_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:back_color="@android:color/darker_gray"
        app:back_width="10dp"
        app:front_color1="@color/bottom_bar_text_selected_color"
        app:front_width="10dp"
        app:is_need_content="true"
        app:is_need_title="true"
        app:max_value="100"
        app:string_title="完成率"
        app:total_engle="360" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/tv_turnover_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnover_volume"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_monthly_target_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_target"
            android:layout_below="@+id/tv_turnover_label"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_rmb_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb_label"
            android:layout_below="@+id/tv_monthly_target_label"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tv_monthly_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50000.00"
            android:layout_toRightOf="@id/tv_rmb_label"
            android:layout_alignBaseline="@id/tv_rmb_label"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tv_completed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:layout_toRightOf="@+id/tv_monthly_target_label"
            android:layout_alignBaseline="@+id/tv_monthly_target_label"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tv_rmb_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb_label"
            android:layout_below="@+id/tv_completed_label"
            android:layout_alignLeft="@+id/tv_completed_label"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tv_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="36000.00"
            android:layout_toRightOf="@id/tv_rmb_label1"
            android:layout_alignBaseline="@id/tv_rmb_label1"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>
    </RelativeLayout>
</LinearLayout>