<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_total_turnover"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fx_find_pressed" />

            <TextView
                android:id="@+id/tv_total_turnover_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_total_turnover"
                android:text="@string/total_turnover" />

            <TextView
                android:id="@+id/tv_total_turnover_rmb_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_total_turnover_label"
                android:layout_below="@+id/tv_total_turnover_label"
                android:layout_marginTop="5dp"
                android:text="@string/rmb_label"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_total_turnover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_total_turnover_rmb_label"
                android:layout_toRightOf="@+id/tv_total_turnover_rmb_label"
                android:singleLine="true"
                android:text="266655920.33"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_unit_price"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fx_find_pressed" />

            <TextView
                android:id="@+id/tv_unit_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_unit_price"
                android:text="@string/unit_price" />

            <TextView
                android:id="@+id/tv_unit_price_rmb_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_unit_price_label"
                android:layout_below="@+id/tv_unit_price_label"
                android:layout_marginTop="5dp"
                android:text="@string/rmb_label"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_unit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_unit_price_rmb_label"
                android:layout_toRightOf="@+id/tv_unit_price_rmb_label"
                android:text="2.25"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_numbers_of_customer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fx_find_pressed" />

            <TextView
                android:id="@+id/tv_numbers_of_customer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_numbers_of_customer"
                android:text="@string/numbers_of_customer" />

            <TextView
                android:id="@+id/tv_numbers_of_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_numbers_of_customer_label"
                android:layout_below="@+id/tv_numbers_of_customer_label"
                android:layout_marginTop="5dp"
                android:text="804"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_contract_number"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fx_find_pressed" />

            <TextView
                android:id="@+id/tv_contract_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_contract_number"
                android:text="@string/contract_number" />

            <TextView
                android:id="@+id/tv_contract_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_contract_number_label"
                android:layout_below="@+id/tv_contract_number_label"
                android:layout_marginTop="5dp"
                android:text="84"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>