<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soubu.CRMProject.view.activity.HomeActivity">

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/btn_container_conversation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_conversation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottom_bar_normal_bg"
                android:drawableTop="@drawable/selector_home_tab_workbench_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="3dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/home_page"
                android:textColor="@color/selector_home_bottom_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/unread_msg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/unread_count_bg"
                android:gravity="center"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_address_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_address_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottom_bar_normal_bg"
                android:drawableTop="@drawable/selector_home_tab_crm_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="3dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/crm"
                android:textColor="@color/selector_home_bottom_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/unread_address_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/unread_dot"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_find"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottom_bar_normal_bg"
                android:drawableTop="@drawable/selector_home_tab_todo_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="3dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/todo"
                android:textColor="@color/selector_home_bottom_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
        <!--<RelativeLayout-->
            <!--android:id="@+id/btn_container_profile"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1" >-->

            <!--<Button-->
                <!--android:id="@+id/btn_profile"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/bottom_bar_normal_bg"-->
                <!--android:drawableTop="@drawable/selector_home_tab_profile_bg"-->
                <!--android:onClick="onTabClicked"-->
                <!--android:paddingBottom="3dip"-->
                <!--android:paddingTop="3dip"-->
                <!--android:scaleType="matrix"-->
                <!--android:text="我"-->
                <!--android:textColor="@color/selector_home_bottom_text_color"-->
                <!--android:textSize="12sp" />-->
        <!--</RelativeLayout>-->
    </LinearLayout>
    <View
        android:id="@+id/view_temp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#D6D6D6"
        android:layout_above="@id/main_bottom"
        />

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_temp" />
</RelativeLayout>
